@@ -1,6 +1,6 @@
 [bdist_rpm]
 requires = graphtool >= 0.6.4 MySQL-python python-sqlite Cheetah /usr/bin/ldapsearch CherryPy ZSI python-setuptools
-release = 14
+release = 1
 
 [install]
 optimize=1
