@@ -1,6 +1,6 @@
 [bdist_rpm]
 requires = graphtool >= 0.6.4 MySQL-python python-sqlite python-cheetah /usr/bin/ldapsearch python-cherrypy python-ZSI python-setuptools
-release = 6
+release = 2
 
 
 [install]
