@@ -1,6 +1,6 @@
 [bdist_rpm]
 requires = graphtool >= 0.6.4 MySQL-python python-sqlite python-cheetah /usr/bin/ldapsearch python-cherrypy >= 3.1.2 python-ZSI python-setuptools OSG-Measurements-Metrics-Db python-json gratia-probe-common 	gratia-probe-services
-release = 6
+release = 2
 
 [install]
 optimize=1
