@@ -1,6 +1,6 @@
 Metadata-Version: 1.0
 Name: OSG-Measurements-Metrics-Db
-Version: 0.9
+Version: 1.0
 Summary: DB code - OSG Measurements and Metrics webpages.
 Home-page: http://t2.unl.edu/documentation/gratia_graphs
 Author: Brian Bockelman
