@@ -1,27 +1,27 @@
 #from urllib import quote
 #from gratia.database.query_handler import displayName
 
-<h1>Project Accounting</h1>
+<h2>Project Accounting</h2>
 #include $image_maps
-<h3>Monthly CPU hours per Project (<a href="$base_url/xml/monthly_project_cpu_hours$filter_url">Analyze</a>)</h3>
+<h5>Monthly CPU hours per Project (<a href="$base_url/xml/monthly_project_cpu_hours$filter_url">Analyze</a>)</h5>
 <img src="$base_url/bar_graphs/monthly_project_cpu_hours$filter_url" usemap="#map"></p>
 
-<h3>Monthly wall hours per Project (<a href="$base_url/xml/monthly_project_hours$filter_url">Analyze</a>)</h3>
+<h5>Monthly wall hours per Project (<a href="$base_url/xml/monthly_project_hours$filter_url">Analyze</a>)</h5>
 <img src="$base_url/bar_graphs/monthly_project_hours$filter_url" usemap="#map"></p>
 
-<h3>Monthly Job Count per Project (<a href="$base_url/xml/monthly_project_job_count$filter_url">Analyze</a>)</h3>
+<h5>Monthly Job Count per Project (<a href="$base_url/xml/monthly_project_job_count$filter_url">Analyze</a>)</h5>
 <img src="$base_url/bar_graphs/monthly_project_job_count$filter_url" usemap="#map"></p>
 
-<h3>Daily Hours by Project (<a href="$base_url/xml/project_hours_bar$filter_url">Analyze</a>)</h3>
+<h5>Daily Hours by Project (<a href="$base_url/xml/project_hours_bar$filter_url">Analyze</a>)</h5>
 <p><img src="$base_url/bar_graphs/project_hours_bar$filter_url" usemap="#map"></p>
 
-<h3>Daily Hours by Project and Site (<a href="$base_url/xml/project_site_hours_bar$filter_url">Analyze</a>)</h3>
+<h5>Daily Hours by Project and Site (<a href="$base_url/xml/project_site_hours_bar$filter_url">Analyze</a>)</h5>
 <p><img src="$base_url/bar_graphs/project_site_hours_bar$filter_url" usemap="#map"></p>
 
-<h3>User Non-zero exit code (<a href="$base_url/xml/projectname_nonzero_exit$filter_url">Analyze</a>)</h3>
+<h5>User Non-zero exit code (<a href="$base_url/xml/projectname_nonzero_exit$filter_url">Analyze</a>)</h5>
 <p><img src="$base_url/bar_graphs/projectname_nonzero_exit$filter_url" usemap="#map"></p>
 
-<h3>Job Count by Project (<a href="$base_url/xml/project_job_cnt$filter_url">Analyze</a>)</h3>
+<h5>Job Count by Project (<a href="$base_url/xml/project_job_cnt$filter_url">Analyze</a>)</h5>
 <p><img src="$base_url/bar_graphs/project_job_cnt$filter_url" usemap="#map"></p>
 
 <!-- Controls for filtering sites / VOs / dates / etc -->
